--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -8,7 +8,7 @@ header {
     display: flex;
     margin-top: 20px;
 
-    .menu {
+    .header {
         display: flex;
         width: 100%;
         justify-content: space-between;
