--- a/style.css
+++ b/style.css
@@ -141,4 +141,30 @@ header .socialLinks img {
   margin-left: 117px;
 }
 
+.footer {
+  display: flex;
+}
+.footer .contact {
+  display: flex;
+  flex-direction: column;
+}
+.footer #scroll_to_top {
+  position: fixed;
+  width: 25px;
+  height: 25px;
+  bottom: 50px;
+  right: 30px;
+}
+.footer #scroll_to_top img {
+  width: 25px;
+}
+.footer #scroll_to_top img:hover {
+  background-color: rgb(250, 250, 181);
+  color: #fff; /* Couleur du texte au survol */
+  transition: background-color 0.3s, color 0.3s; /* Animation de transition au survol */
+}
+.footer #scroll_to_top img:active {
+  background-color: rgb(236, 181, 250);
+}
+
 /*# sourceMappingURL=style.css.map */
