modif footer p + css

--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,9 +1,12 @@
 .footer {
     display: flex;
+    height: 20vh;
 
     .contact {
         display: flex;
         flex-direction: column;
+        font-family: $font-family;
+        margin-left: 40px;
     }
 
     #scroll_to_top {
