--- a/style.css
+++ b/style.css
@@ -143,10 +143,13 @@ header .socialLinks img {
 
 .footer {
   display: flex;
+  height: 20vh;
 }
 .footer .contact {
   display: flex;
   flex-direction: column;
+  font-family: "QuickSand", sans-serif;
+  margin-left: 40px;
 }
 .footer #scroll_to_top {
   position: fixed;
