--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,12 +1,34 @@
 .footer {
     display: flex;
-    height: 20vh;
+    height: 30vh;
 
-    .contact {
+    .infos {
         display: flex;
-        flex-direction: column;
-        font-family: $font-family;
-        margin-left: 40px;
+        width: 100%;
+        gap: 150px;
+        justify-content: center;
+
+
+        .contact {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            font-family: $font-family;
+            margin-left: 40px;
+        }
+    
+        .horaires {
+            display: flex;
+            margin-top: 23px;
+            flex-direction: column;
+            justify-content: center;
+            font-family: $font-family;
+    
+            p {
+                display: flex;
+                justify-content: center;
+            }
+        }
     }
 
     #scroll_to_top {
