--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,5 +1,6 @@
 .menu {
     display: flex;
+    flex-direction: column;
     margin-top: 20px;
     height: 100vh;
 
@@ -8,7 +9,40 @@
         font-size: 2.5em;
         color: $color-text-1;
         align-items: flex-start;
-        width: 50%;
+        width: 70%;
         margin-left: 117px;
+    }
+
+    p {
+        display: flex;
+        margin-top: 10px;
+        font-family: $font-family;
+        font-size: 1.3em;
+        color: $color-text-1;
+        margin-left: 117px;
+
+    }
+
+    .plats {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 30px;
+        width: 100%;
+        gap: 40px;
+        overflow: hidden;
+
+        img {
+            width: 25%;
+            height: 400px;
+            object-fit: cover;
+            border-radius: 0.3em;
+            transition: transform 0.3s ease-in-out;
+            transform-origin: center top; // Modifiez ici pour centrer verticalement seulement
+                
+            &:hover {
+                transform: scale(1.1); // Agrandit l'image de 10% lorsque la souris est dessus
+            }
+        }
     }
 }
