--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -20,7 +20,6 @@
         font-size: 1.3em;
         color: $color-text-1;
         margin-left: 117px;
-
     }
 
     .plats {
@@ -31,6 +30,7 @@
         width: 100%;
         gap: 40px;
         overflow: hidden;
+        margin-top: 60px;
 
         img {
             width: 25%;
