--- a/sass/pages/_firstSection.scss
+++ b/sass/pages/_firstSection.scss
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    height: 310vh;
+    height: 320vh;
 
     .imageContainer {
         display: flex;
         justify-content: center; // Centrer les éléments horizontalement
         align-items: center; // Centrer les éléments verticalement
         width: 100%; // Prend toute la largeur disponible
+        margin-bottom: 20px;
 
         img {
             width: 80%;
@@ -21,7 +22,8 @@
     .text1 {
         display: flex;
         flex-direction: column;
-        margin-top: 30px;
+        margin-top: 60px;
+        margin-bottom: 60px;
         width: 100%;
 
         h1 {
@@ -48,7 +50,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 30px;
         width: 100%;
         gap: 15px;
 
