--- a/style.css
+++ b/style.css
@@ -62,13 +62,14 @@ header .socialLinks img {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
-  height: 310vh;
+  height: 320vh;
 }
 .decouvrir .imageContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-bottom: 20px;
 }
 .decouvrir .imageContainer img {
   width: 80%;
@@ -79,7 +80,8 @@ header .socialLinks img {
 .decouvrir .text1 {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   width: 100%;
 }
 .decouvrir .text1 h1 {
@@ -103,7 +105,6 @@ header .socialLinks img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
   width: 100%;
   gap: 15px;
 }
@@ -157,6 +158,7 @@ header .socialLinks img {
   width: 100%;
   gap: 40px;
   overflow: hidden;
+  margin-top: 60px;
 }
 .menu .plats img {
   width: 25%;
@@ -172,12 +174,12 @@ header .socialLinks img {
 
 .footer {
   display: flex;
-  height: 30vh;
+  height: 35vh;
 }
 .footer .infos {
   display: flex;
   width: 100%;
-  gap: 150px;
+  gap: 160px;
   justify-content: center;
 }
 .footer .infos .contact {
@@ -186,6 +188,12 @@ header .socialLinks img {
   justify-content: center;
   font-family: "QuickSand", sans-serif;
   margin-left: 40px;
+}
+.footer .infos .contact h1 {
+  font-size: 2.2em;
+}
+.footer .infos .contact p {
+  font-size: 1.2em;
 }
 .footer .infos .horaires {
   display: flex;
@@ -197,6 +205,7 @@ header .socialLinks img {
 .footer .infos .horaires p {
   display: flex;
   justify-content: center;
+  font-size: 1.2em;
 }
 .footer #scroll_to_top {
   position: fixed;
